--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -15,16 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>3d-figurine</h1>
+        <h1>3D 公仔</h1>
         <p>Web GL</p>
 
         <p class="view"><a href="https://github.com/Lolikitty/3D-Figurine">View the Project on GitHub <small>Lolikitty/3D-Figurine</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/Lolikitty/3D-Figurine/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Lolikitty/3D-Figurine/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/Lolikitty/3D-Figurine">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Lolikitty/3D-Figurine/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="/WebGL/">View <strong>Web GL</strong></a></li>
+
         </ul>
       </header>
       <section>
