--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="https://github.com/Lolikitty/3D-Figurine">View On <strong>GitHub</strong></a></li>
           <li><a href="https://github.com/Lolikitty/3D-Figurine/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Lolikitty/3D-Figurine/WebGL/">View <strong>Web GL</strong></a></li>
+          <li><a href="http://lolikitty.github.io/3D-Figurine/WebGL/">View <strong>Web GL</strong></a></li>
 
         </ul>
       </header>
